--- a/full_board.html
+++ b/full_board.html
@@ -13,6 +13,7 @@
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
   </script>
+  <script src="youtube_keys.js"></script>  
   <script type="text/javascript" src="comb.js"></script>
   <script type="text/javascript" src="MAS334.js"></script>
   
@@ -80,16 +81,16 @@
    }
   </style>
   <script type="text/javascript">
-   var demo = {};
+   var demo = Object.create(comb.demo);
    
    demo.init = function() {
     var i,j,k,l,A,B,x,y,b,t;
+
+    this.name = 'full_board';
+    
     var me = this;
 
-    this.frame = document.getElementById('frame');
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div = document.getElementById('msg_div');
-    this.perms_table = document.getElementById('perms_table');
+    this.find_ids(['frame','perms_table']);
     
     this.board = matching_problem.full_board(5);
     R = this.board;
@@ -375,6 +376,9 @@
     </table>
    </div>
    <div id="msg_div">
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
