--- a/rook_split.html
+++ b/rook_split.html
@@ -16,6 +16,7 @@
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js">
   </script>
+  <script type="text/javascript" src="youtube_keys.js"></script>
   <script type="text/javascript" src="comb.js"></script>
   <script type="text/javascript" src="MAS334.js"></script>
   
@@ -76,19 +77,19 @@
    
   </style>
   <script type="text/javascript">
-   var demo = {};
+   var demo = Object.create(comb.demo);
    
    demo.init = function() {
     var i,R,div,t,h,x;
+
+    this.name = 'rook_split';
+    
     var me = this;
 
-    this.frame = document.getElementById('frame');
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div = document.getElementById('msg_div');
-    this.rook_polynomial_div = document.getElementById('rook_polynomial_div');
-    this.deleted_rook_polynomial_div = document.getElementById('deleted_rook_polynomial_div');
-    this.blocked_rook_polynomial_div = document.getElementById('blocked_rook_polynomial_div');
-    this.relation_div = document.getElementById('relation_div');
+    this.find_ids(['rook_polynomial_div',
+		   'deleted_rook_polynomial_div',
+		   'blocked_rook_polynomial_div',
+		   'relation_div']);
     
     R = matching_problem.from_eqs(
      {A : ['a','d'], B : ['b','c','d'], C : ['c'], D : ['a','b']}
@@ -322,6 +323,9 @@
     <div class="control" onclick="demo.delete()">Strip</div>
    </div>
    <div id="msg_div">
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
