--- a/venn2.html
+++ b/venn2.html
@@ -44,6 +44,8 @@
    }
 
   </style>
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <script type="text/javascript">
    
    var region = {
@@ -64,7 +66,7 @@
    
    var point = {};
    
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.x0 = 300;
    demo.y0 = 350;
@@ -74,7 +76,9 @@
    demo.init = function() {
     var x0,y0,a,b,r,i,s,p;
 
-    this.main_svg = document.getElementById('main_svg');
+    this.name = 'venn2';
+
+    this.find_ids();
     
     this.step = 0;
 
@@ -442,6 +446,9 @@
    <div id="controls_div">
     <div class="control" onclick="demo.next(1)">Next</div>
     <div class="control" onclick="demo.next(-1)">Previous</div>
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
