--- a/derange4.html
+++ b/derange4.html
@@ -18,17 +18,17 @@
     font-size: 24px;
    }
 
-   table#perms td {
+   table#perm_table td {
     width: 110px;
     height: 60px;
     font-size: 30px;
    }
 
-   table#perms td.deranged {
+   table#perm_table td.deranged {
     background-color: #B0C4DE;
    }
 
-   table#perms span {
+   table#perm_table span {
     padding: 2px;
     margin: 2px;
     border-radius: 5px;
@@ -90,6 +90,8 @@
 
    
   </style>
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <script type="text/javascript">
 
    var perm = {
@@ -103,11 +105,13 @@
     span : {}
    }
 
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.init = function() {
-    this.perm_table = document.getElementById('perms');
-    this.msg_div = document.getElementById('msg_div');
+
+    this.name = 'derange4';
+
+    this.find_ids(['perm_table']);
     
     r = 0;
     c = 0;
@@ -324,7 +328,7 @@
  <body onload="demo.init()">
   <div id="frame">
    <div id="main_div">
-    <table id="perms" class="edged"></table>
+    <table id="perm_table" class="edged"></table>
    </div>
    <div id="controls_div">
     <table>
@@ -366,6 +370,9 @@
     <div id="derange" style="display:none">
      $$ |D| = 24 - (6+6+6+6) + (2+2+2+2+2+2) -(1+1+1+1)+1 = 9. $$
     </div>
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
