--- a/derange5.html
+++ b/derange5.html
@@ -26,17 +26,17 @@
     font-size: 20px;
    }
 
-   table#perms td {
+   table#perm_table td {
     width: 85px;
     height: 40px;
     font-size: 18px;
    }
 
-   table#perms td.deranged {
+   table#perm_table td.deranged {
     background-color: #B0C4DE;
    }
 
-   table#perms span {
+   table#perm_table span {
     padding: 1px;
     margin: 1px;
     border-radius: 5px;
@@ -83,6 +83,8 @@
    }
 
   </style>
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <script type="text/javascript">
 
    var perm = {
@@ -96,10 +98,13 @@
     span : {}
    }
 
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.init = function() {
-    this.perm_table = document.getElementById('perms');
+
+    this.name = 'derange5';
+
+    this.find_ids(['perm_table']);
 
     r = 0;
     c = 0;
@@ -164,7 +169,7 @@
  <body onload="demo.init()">
   <div id="frame">
    <div id="main_div">
-    <table id="perms" class="edged"></table>
+    <table id="perm_table" class="edged"></table>
    </div>
    <div id="msg_div">
     For each set $I\subseteq\{1,2,3,4,5\}$ with $|I|=k$ we have $|P_I|=(5-k)!$.
@@ -178,6 +183,9 @@
                      - \frac{1}{3!} + \frac{1}{4!} - \frac{1}{5!}
                 \right) = 120 - 120 + 60 - 20 + 5 - 1 = 44.
     $$
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
