--- a/fortytwo.html
+++ b/fortytwo.html
@@ -11,13 +11,6 @@
    });
   </script> 
   <style type="text/css">
-   div#main_div {
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    font-size: 24px;
-   }
-
    div#controls_div { 
     position:absolute; 
     right: 50px;
@@ -31,13 +24,15 @@
    div#msg_div {
     position: absolute;
     left: 50px;
-    top: 600px;
+    top: 620px;
     text-align:center;
-    font-size: 20px;
+    font-size: 18px;
    }
 
 
   </style>
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <script type="text/javascript">
 
    var el = {
@@ -49,7 +44,7 @@
     svg : null
    }
 
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.x0 = 80;
    demo.y0 = 60;
@@ -70,8 +65,9 @@
 
 
    demo.init = function() {
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div = document.getElementById('msg_div');
+    this.name = 'fortytwo';
+    
+    this.find_ids();
 
     r = 0;
     c = 0;
@@ -300,7 +296,7 @@
  </head>
  <body onload="demo.init()">
   <div id="frame">
-   <svg id="main_svg" width="800" height="640"></svg>
+   <svg id="main_svg" width="800" height="600"></svg>
    <div id="controls_div">
     <table>
      <tr>
@@ -322,6 +318,9 @@
     </table>
    </div>
    <div id="msg_div">
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
