--- a/piggybank.html
+++ b/piggybank.html
@@ -57,6 +57,8 @@
   </script>
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/utils/Draggable.min.js"></script>
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <script type="text/javascript">
 
    var day = {
@@ -130,7 +132,7 @@
     }
    }
    
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.n = 15;
    demo.w = 30;
@@ -140,10 +142,11 @@
    demo.init = function() {
     var i,j,d,x1,x2,x3,x4,u,w;
 
+    this.name = 'piggybank';
+    
     me = this;
 
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div  = document.getElementById('msg_div');
+    this.find_ids();
 
     this.day = {};
 
@@ -430,6 +433,9 @@
     <div class="control" id="check">Check</div>
    </div>
    <div id="msg_div">
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
