--- a/wrestling.html
+++ b/wrestling.html
@@ -15,6 +15,7 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
   </script>
   <script src="youtube_keys.js"></script>  
+  <script type="text/javascript" src="youtube_keys.js"></script>
   <script src="comb.js"></script>  
   <style type="text/css">
    div#main_div { 
@@ -236,6 +237,9 @@
     <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
 -->
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
+   </div>
   </div>
  </body>
 </html>
