Double some backslashes

--- a/plausible.html
+++ b/plausible.html
@@ -153,8 +153,8 @@
       'so $U$ is barely plausible.  This holds for any matching problem, not ' +
       'just this one: the empty set is always barely plausible.';
     } else if (this.U.length == 8) {
-     msg = 'For the full set $U=B=\{1,\dotsc,8\}$ we have ' +
-      '$C_U=A=\{a,\dotsc,h\}$.  This means that $|C_U|=|U|=8$, ' +
+     msg = 'For the full set $U=B=\\{1,\\dotsc,8\\}$ we have ' +
+      '$C_U=A=\\{a,\\dotsc,h\\}$.  This means that $|C_U|=|U|=8$, ' +
       'so $U$ is barely plausible.';
     } else {
      var nU = this.U.length;
