Change module code to MPS352

--- a/affine_design.html
+++ b/affine_design.html
@@ -6,7 +6,7 @@
 
   <title>Affine design</title>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js"> 
    MathJax.Hub.Config({
