--- a/dominos.html
+++ b/dominos.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <style type="text/css">
    
