--- a/plausible.html
+++ b/plausible.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js"> 
    MathJax.Hub.Config({
@@ -15,7 +15,7 @@
   </script>
   <script src="youtube_keys.js"></script>  
   <script type="text/javascript" src="comb.js"></script>
-  <script type="text/javascript" src="MAS334.js"></script>
+  <script type="text/javascript" src="MPS352.js"></script>
   <style type="text/css">
    div#msg_div {
     position: absolute;
