--- a/rectangles.html
+++ b/rectangles.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js"> 
    MathJax.Hub.Config({
@@ -14,7 +14,7 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
   </script>
   <script type="text/javascript" src="comb.js"></script>
-  <script type="text/javascript" src="MAS334.js"></script>
+  <script type="text/javascript" src="MPS352.js"></script>
   
   <style type="text/css">
    div#main_div {
