--- a/solve_menage.html
+++ b/solve_menage.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <style type="text/css">
 
@@ -40,7 +40,7 @@
   </script> 
   <script type="text/javascript" src="youtube_keys.js"></script>
   <script type="text/javascript" src="comb.js"></script>
-  <script type="text/javascript" src="MAS334.js"></script>
+  <script type="text/javascript" src="MPS352.js"></script>
   <script type="text/javascript">
 
    var demo = Object.create(comb.demo);
