--- a/sum_set.html
+++ b/sum_set.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <style type="text/css" media="screen">
-   @import url(MAS334_demo.css);
+   @import url(MPS352_demo.css);
   </style>
   <style type="text/css">
 
@@ -41,7 +41,7 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/utils/Draggable.min.js"></script>
   <script src="youtube_keys.js"></script>  
   <script type="text/javascript" src="comb.js"></script>
-  <script type="text/javascript" src="MAS334.js"></script>
+  <script type="text/javascript" src="MPS352.js"></script>
 
   <script type="text/javascript">
    var box = {
